<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.NiyanthaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="305dp"
            android:layout_height="37dp"
            android:layout_margin="16dp"
            android:text="STUDENT DETAILS"
            android:textColor="#000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/reg_no"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/registration_n_o" />

        <EditText
            android:id="@+id/reg_no_edit_text"
            android:layout_width="305dp"
            android:layout_height="43dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/enter_your_registration_number"
            tools:layout_editor_absoluteX="23dp" />


        <TextView
            android:id="@+id/name"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/name1" />


        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="305dp"
            android:layout_height="43dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/enter_your_name"
            android:inputType="textPersonName"/>

        <TextView
            android:id="@+id/age"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/Age" />

        <EditText
            android:id="@+id/age_edit_text"
            android:layout_width="305dp"
            android:layout_height="43dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/enter_your_age"
            android:inputType="number"
            />
        <TextView
            android:id="@+id/phone_no"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/phone_number" />

        <EditText
            android:id="@+id/phone_edit_text"
            android:layout_width="305dp"
            android:layout_height="43dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/enter_your_phone_number"
            android:inputType="phone"></EditText>

        <TextView
            android:id="@+id/city"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/city" />

        <EditText
            android:id="@+id/city_edit_text"
            android:layout_width="305dp"
            android:layout_height="43dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/where_do_you_live"
            android:inputType="textPersonName"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/send_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="20dp"
            android:clickable="true"
            app:srcCompat="@android:drawable/ic_menu_send" />

    </LinearLayout>




</androidx.core.widget.NestedScrollView>